<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SymtomActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/covid_symtoms"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/covid_symtoms2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/covid_symtoms_title"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content1_1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content1_2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content1_3"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/covid_symtoms_title2"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content2_1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content2_2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content2_3"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content2_4"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content2_5"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content2_6"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content2_7"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/covid_symtoms_title3"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content3_1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content3_2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/covid_symtoms_content3_3"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/covid_symtoms_content0_1" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/covid_symtoms_content0_2" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>