<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LifeStyleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="162dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/covid_lifestyle"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/covid_lifestyle2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/covid_lifestyle_title"
                android:textColor="@color/black"
                android:textSize="19dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22sp"
                android:text="@string/covid_lifestyle_content"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/covid_lifestyle_title2"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22sp"
                android:text="@string/covid_lifestyle_content2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/covid_lifestyle_title3"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22sp"
                android:text="@string/covid_lifestyle_content3"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/covid_lifestyle_title4"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22sp"
                android:text="@string/covid_lifestyle_content4"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/covid_lifestyle_title5"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22sp"
                android:text="@string/covid_lifestyle_content5"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>